# libp11

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.in
doc/nonpersistent/: Makefile.in
mingw/: Makefile.am  configure.ac
mingw/doc/: Makefile.am  doxygen.conf.in
mingw/src/: Makefile.am
src/: Makefile.in  libpkcs11.c  p11_load.c
